fuggin items + item names

--- a/src/main/resources/assets/fnaf-one/lang/en_us.json
+++ b/src/main/resources/assets/fnaf-one/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.fnaf-one.pink_garnet": "Pink Garnet"
+  "item.fnaf-one.pink_garnet": "Pink Garnet",
+  "item.fnaf-one.raw_pink_garnet": "Raw Pink Garnet"
 }
