--- a/src/main/resources/assets/fnaf-one/lang/en_us.json
+++ b/src/main/resources/assets/fnaf-one/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "item.fnaf-one.pink_garnet": "Pink Garnet",
-  "item.fnaf-one.raw_pink_garnet": "Raw Pink Garnet",
+  "item.fnaf-one.arcade_carpet": "Arcade Carpet",
 
   "block.fnaf-one.pink_garnet_block": "Block of Pink Garnet",
   "block.fnaf-one.raw_pink_garnet_block": "Block of Raw Pink Garnet",
